--- a/mauritania-images.html
+++ b/mauritania-images.html
@@ -24,8 +24,8 @@
         <nav class="navigation">
             <a href="index.html">home</a>
             <a href="culture.html">culture</a>
-            <a href="">quizes</a>
-            <a href="">sign up</a>
+            <a href="quizez.html">quizes</a>
+            <a href="mauritania-images.html">images</a>
         </nav>
     </header>
     <div class="gallery-section">
