--- a/quizez.html
+++ b/quizez.html
@@ -16,50 +16,173 @@
         <nav class="navigation">
             <a href="index.html">home</a>
             <a href="culture.html">culture</a>
-            <a href="">quizes</a>
-            <a href="">sign up</a>
+            <a href="quizez.html">quizes</a>
+            <a href="mauritania-images.html">images</a>
         </nav>
     </header>
-    <section class="quizes">
+    <section class="quizes" id ="1">
         <div class="quize-content">
             <div class="title">
                 <h2>Quizes</h2>
             </div>
-            <div class="quize-container">
-                <div class="quize">
+                <div class="quize ">
                     <div class="Q">
-                        <h3>Q1: what is the president name ?</h3>
+                        <h4> Q1:who is the president of mauritania ?</h4>
                     </div>
+                  <form>
                     <div class="choices">
                         <div class="Q1 bg-color-cursor">
-                            <label for="question1">quazwani</label>
-                            <input type="radio" id="question1">
+                            <label for="question1">Ghazouani</label>
+                            <input type="radio" id="question1" name="question-one-choices">
                         </div>
                         <div class="Q2 bg-color-cursor">
                             <label for="question2">mohamed</label>
-                            <input type="radio" id="question2">
+                            <input type="radio" id="question2" name="question-one-choices">
                         </div>
                         <div class="Q3 bg-color-cursor">
-                            <label for="question3">haibelti</label>
-                            <input type="radio" id="question3">
+                            <label for="question3">sidi</label>
+                            <input type="radio" id="question3" name="question-one-choices">
                         </div>
                         <div class="Q4 bg-color-cursor">
                             <label for="question4">moctar</label>
-                            <input type="radio" id="question4">
+                            <input type="radio" id="question4" name="question-one-choices">
                         </div>
                     </div>
                 </div>
                 <div class="quizes-btn">
-                    <div class="next-btn">
-                        <a href="#" >next &raquo;</a>
-                    </div>
-                    <!-- <div class="back-btn">
-                        <!-- <label for="">back</label> 
-                            <input type="submit" value="back">
-                    </div> -->
+                        <a href="#2" class="next-btn">next &raquo;</a>
+                        <a href="index.html" class="back-btn">&laquo;home</a>
                 </div>
-            </div>
+                  </form>
         </div>
+    </section>
+    <section id="2" class="quize2">
+        <div class="quize-content">
+                <div class="quize ">
+                    <div class="Q">
+                        <h4>  Q2:When did Mauritania become independent?</h4>
+                    </div>
+                  <form>
+                    <div class="choices">
+                        <div class="Q1 bg-color-cursor">
+                            <label for="question1">7 March 1956</label>
+                            <input type="radio" id="question1" name="question-one-choices">
+                        </div>
+                        <div class="Q2 bg-color-cursor">
+                            <label for="question2">22 May 1952</label>
+                            <input type="radio" id="question2" name="question-one-choices">
+                        </div>
+                        <div class="Q3 bg-color-cursor">
+                            <label for="question3">10 July 1964</label>
+                            <input type="radio" id="question3" name="question-one-choices">
+                        </div>
+                        <div class="Q4 bg-color-cursor">
+                            <label for="question4">28 November 1960</label>
+                            <input type="radio" id="question4" name="question-one-choices">
+                        </div>
+                    </div>
+                </div>
+                <div class="quizes-btn">
+                        <a href="#3" class="next-btn">next &raquo;</a>
+                        <a href="#1" class="back-btn">&laquo;back</a>
+                </div>
+                  </form>
+    </section>
+    <section id="3" class="quize2">
+        <div class="quize-content">
+                <div class="quize ">
+                    <div class="Q">
+                        <h4>Q3: what is the capital of mauritania ?</h4>
+                    </div>
+                  <form>
+                    <div class="choices">
+                        <div class="Q1 bg-color-cursor">
+                            <label for="question1">nouadihbou</label>
+                            <input type="radio" id="question1" name="question-one-choices">
+                        </div>
+                        <div class="Q2 bg-color-cursor">
+                            <label for="question2">nouackchott</label>
+                            <input type="radio" id="question2" name="question-one-choices">
+                        </div>
+                        <div class="Q3 bg-color-cursor">
+                            <label for="question3">aioun</label>
+                            <input type="radio" id="question3" name="question-one-choices">
+                        </div>
+                        <div class="Q4 bg-color-cursor">
+                            <label for="question4">kiffa</label>
+                            <input type="radio" id="question4" name="question-one-choices">
+                        </div>
+                    </div>
+                </div>
+                <div class="quizes-btn">
+                        <a href="#4" class="next-btn">next &raquo;</a>
+                        <a href="#2" class="back-btn">&laquo;back</a>
+                </div>
+                  </form>
+    </section>
+    <section id="4" class="quize2">
+        <div class="quize-content">
+                <div class="quize ">
+                    <div class="Q">
+                        <h4>Q4: What language is spoken in Mauritania?</h4>
+                    </div>
+                  <form>
+                    <div class="choices">
+                        <div class="Q1 bg-color-cursor">
+                            <label for="question1">wolof</label>
+                            <input type="radio" id="question1" name="question-one-choices">
+                        </div>
+                        <div class="Q2 bg-color-cursor">
+                            <label for="question2">arabic</label>
+                            <input type="radio" id="question2" name="question-one-choices">
+                        </div>
+                        <div class="Q3 bg-color-cursor">
+                            <label for="question3">darija</label>
+                            <input type="radio" id="question3" name="question-one-choices">
+                        </div>
+                        <div class="Q4 bg-color-cursor">
+                            <label for="question4">spanish</label>
+                            <input type="radio" id="question4" name="question-one-choices">
+                        </div>
+                    </div>
+                </div>
+                <div class="quizes-btn">
+                        <a href="#5" class="next-btn">next &raquo;</a>
+                        <a href="#3" class="back-btn">&laquo;back</a>
+                </div>
+                  </form>
+    </section>
+    <section id="5" class="quize2">
+        <div class="quize-content">
+                <div class="quize ">
+                    <div class="Q">
+                        <h4>Q5: Which is the currency of Mauritania?</h4>
+                    </div>
+                  <form>
+                    <div class="choices">
+                        <div class="Q1 bg-color-cursor">
+                            <label for="question1">frank</label>
+                            <input type="radio" id="question1" name="question-one-choices">
+                        </div>
+                        <div class="Q2 bg-color-cursor">
+                            <label for="question2">lats</label>
+                            <input type="radio" id="question2" name="question-one-choices">
+                        </div>
+                        <div class="Q3 bg-color-cursor">
+                            <label for="question3">Riyal</label>
+                            <input type="radio" id="question3" name="question-one-choices">
+                        </div>
+                        <div class="Q4 bg-color-cursor">
+                            <label for="question4">dinar</label>
+                            <input type="radio" id="question4" name="question-one-choices">
+                        </div>
+                    </div>
+                </div>
+                <div class="quizes-btn">
+                        <input type="submit" value="submit">
+                        <a href="#4" class="back-btn">&laquo;back</a>
+                </div>
+                  </form>
     </section>
 </body>
 </html>
