--- a/quizez.html
+++ b/quizez.html
@@ -65,20 +65,20 @@
                   <form>
                     <div class="choices">
                         <div class="Q1 bg-color-cursor">
-                            <label for="question1">7 March 1956</label>
-                            <input type="radio" id="question1" name="question-one-choices">
+                            <label>7 March 1956</label>
+                            <input type="radio" name="2">
                         </div>
                         <div class="Q2 bg-color-cursor">
-                            <label for="question2">22 May 1952</label>
-                            <input type="radio" id="question2" name="question-one-choices">
+                            <label >22 May 1952</label>
+                            <input type="radio" name="2">
                         </div>
                         <div class="Q3 bg-color-cursor">
-                            <label for="question3">10 July 1964</label>
-                            <input type="radio" id="question3" name="question-one-choices">
+                            <label >10 July 1964</label>
+                            <input type="radio"  name="2">
                         </div>
                         <div class="Q4 bg-color-cursor">
-                            <label for="question4">28 November 1960</label>
-                            <input type="radio" id="question4" name="question-one-choices">
+                            <label >28 November 1960</label>
+                            <input type="radio" name="2">
                         </div>
                     </div>
                 </div>
@@ -97,20 +97,20 @@
                   <form>
                     <div class="choices">
                         <div class="Q1 bg-color-cursor">
-                            <label for="question1">nouadihbou</label>
-                            <input type="radio" id="question1" name="question-one-choices">
+                            <label for="question9">nouadihbou</label>
+                            <input type="radio" id="question9" name="question-three-choices">
                         </div>
                         <div class="Q2 bg-color-cursor">
-                            <label for="question2">nouackchott</label>
-                            <input type="radio" id="question2" name="question-one-choices">
+                            <label for="question10">nouackchott</label>
+                            <input type="radio" id="question10" name="question-three-choices">
                         </div>
                         <div class="Q3 bg-color-cursor">
-                            <label for="question3">aioun</label>
-                            <input type="radio" id="question3" name="question-one-choices">
+                            <label for="question11">aioun</label>
+                            <input type="radio" id="question11" name="question-three-choices">
                         </div>
                         <div class="Q4 bg-color-cursor">
-                            <label for="question4">kiffa</label>
-                            <input type="radio" id="question4" name="question-one-choices">
+                            <label for="question12">kiffa</label>
+                            <input type="radio" id="question12" name="question-three-choices">
                         </div>
                     </div>
                 </div>
@@ -129,20 +129,20 @@
                   <form>
                     <div class="choices">
                         <div class="Q1 bg-color-cursor">
-                            <label for="question1">wolof</label>
-                            <input type="radio" id="question1" name="question-one-choices">
+                            <label for="question13">wolof</label>
+                            <input type="radio" id="question13" name="question-four-choices">
                         </div>
                         <div class="Q2 bg-color-cursor">
-                            <label for="question2">arabic</label>
-                            <input type="radio" id="question2" name="question-one-choices">
+                            <label for="question14">arabic</label>
+                            <input type="radio" id="question14" name="question-four.2-choices">
                         </div>
                         <div class="Q3 bg-color-cursor">
-                            <label for="question3">darija</label>
-                            <input type="radio" id="question3" name="question-one-choices">
+                            <label for="question15">darija</label>
+                            <input type="radio" id="question15" name="question-four.3-choices">
                         </div>
                         <div class="Q4 bg-color-cursor">
-                            <label for="question4">spanish</label>
-                            <input type="radio" id="question4" name="question-one-choices">
+                            <label for="question16">spanish</label>
+                            <input type="radio" id="question16" name="question-four.4-choices">
                         </div>
                     </div>
                 </div>
@@ -161,20 +161,20 @@
                   <form>
                     <div class="choices">
                         <div class="Q1 bg-color-cursor">
-                            <label for="question1">frank</label>
-                            <input type="radio" id="question1" name="question-one-choices">
+                            <label for="question17">frank</label>
+                            <input type="radio" id="question17" name="question-five-choices">
                         </div>
                         <div class="Q2 bg-color-cursor">
-                            <label for="question2">lats</label>
-                            <input type="radio" id="question2" name="question-one-choices">
+                            <label for="question18">lats</label>
+                            <input type="radio" id="question18" name="question-five-choices">
                         </div>
                         <div class="Q3 bg-color-cursor">
-                            <label for="question3">Riyal</label>
-                            <input type="radio" id="question3" name="question-one-choices">
+                            <label for="question19">Riyal</label>
+                            <input type="radio" id="question19" name="question-five-choices">
                         </div>
                         <div class="Q4 bg-color-cursor">
-                            <label for="question4">dinar</label>
-                            <input type="radio" id="question4" name="question-one-choices">
+                            <label for="question20">dinar</label>
+                            <input type="radio" id="question20" name="question-five-choices">
                         </div>
                     </div>
                 </div>
