fixing javsacript Quiz

--- a/quizez.html
+++ b/quizez.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Assistant&family=Merriweather&family=Montserrat&family=Moon+Dance&family=Roboto&family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="./index.js"></script>
+ 
 </head>
 <body>
     <header>
@@ -33,19 +35,19 @@
                     <div class="choices">
                         <div class="Q1 bg-color-cursor">
                             <label for="question1">Ghazouani</label>
-                            <input type="radio" id="question1" name="question-one-choices">
+                            <input type="radio" id="question1" name="1">
                         </div>
                         <div class="Q2 bg-color-cursor">
                             <label for="question2">mohamed</label>
-                            <input type="radio" id="question2" name="question-one-choices">
+                            <input type="radio" id="question2" name="1">
                         </div>
                         <div class="Q3 bg-color-cursor">
                             <label for="question3">sidi</label>
-                            <input type="radio" id="question3" name="question-one-choices">
+                            <input type="radio" id="question3" name="1">
                         </div>
                         <div class="Q4 bg-color-cursor">
                             <label for="question4">moctar</label>
-                            <input type="radio" id="question4" name="question-one-choices">
+                            <input type="radio" id="question4" name="1">
                         </div>
                     </div>
                 </div>
@@ -98,19 +100,19 @@
                     <div class="choices">
                         <div class="Q1 bg-color-cursor">
                             <label for="question9">nouadihbou</label>
-                            <input type="radio" id="question9" name="question-three-choices">
+                            <input type="radio" id="question9" name="3">
                         </div>
                         <div class="Q2 bg-color-cursor">
                             <label for="question10">nouackchott</label>
-                            <input type="radio" id="question10" name="question-three-choices">
+                            <input type="radio" id="question10" name="3">
                         </div>
                         <div class="Q3 bg-color-cursor">
                             <label for="question11">aioun</label>
-                            <input type="radio" id="question11" name="question-three-choices">
+                            <input type="radio" id="question11" name="3">
                         </div>
                         <div class="Q4 bg-color-cursor">
                             <label for="question12">kiffa</label>
-                            <input type="radio" id="question12" name="question-three-choices">
+                            <input type="radio" id="question12" name="3">
                         </div>
                     </div>
                 </div>
@@ -130,19 +132,19 @@
                     <div class="choices">
                         <div class="Q1 bg-color-cursor">
                             <label for="question13">wolof</label>
-                            <input type="radio" id="question13" name="question-four-choices">
+                            <input type="radio" id="question13"  name="question-four-choices" class="s">
                         </div>
                         <div class="Q2 bg-color-cursor">
                             <label for="question14">arabic</label>
-                            <input type="radio" id="question14" name="question-four.2-choices">
+                            <input type="radio" id="question14" name="question-four.2-choices" class="s">
                         </div>
                         <div class="Q3 bg-color-cursor">
                             <label for="question15">darija</label>
-                            <input type="radio" id="question15" name="question-four.3-choices">
+                            <input type="radio" id="question15" name="question-four.3-choices" class="s">
                         </div>
                         <div class="Q4 bg-color-cursor">
                             <label for="question16">spanish</label>
-                            <input type="radio" id="question16" name="question-four.4-choices">
+                            <input type="radio" id="question16" name="question-four.4-choices" class="s">
                         </div>
                     </div>
                 </div>
@@ -162,24 +164,24 @@
                     <div class="choices">
                         <div class="Q1 bg-color-cursor">
                             <label for="question17">frank</label>
-                            <input type="radio" id="question17" name="question-five-choices">
+                            <input type="radio" id="question17" name="5">
                         </div>
                         <div class="Q2 bg-color-cursor">
                             <label for="question18">lats</label>
-                            <input type="radio" id="question18" name="question-five-choices">
+                            <input type="radio" id="question18" name="5">
                         </div>
                         <div class="Q3 bg-color-cursor">
                             <label for="question19">Riyal</label>
-                            <input type="radio" id="question19" name="question-five-choices">
+                            <input type="radio" id="question19" name="5">
                         </div>
                         <div class="Q4 bg-color-cursor">
                             <label for="question20">dinar</label>
-                            <input type="radio" id="question20" name="question-five-choices">
+                            <input type="radio" id="question20" name="5">
                         </div>
                     </div>
                 </div>
                 <div class="quizes-btn">
-                        <input type="submit" value="submit">
+                        <input type="button" value="submit" class="submit" onclick="choixprop()">
                         <a href="#4" class="back-btn">&laquo;back</a>
                 </div>
                   </form>
